<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoFromAdmin">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="BACK"
            android:id="@+id/backFromFeedbackScreen"
            android:textColor="@android:color/white"
            android:fontFamily="@font/belgrano"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:background="@drawable/swipe_button_shape"
            android:layout_marginTop="10dp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:orientation="vertical"
      android:layout_marginTop="60dp"
      android:id="@+id/userLinearLayout1"
    >

      <TextView
          android:layout_width="349dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="20dp"
          android:id="@+id/userInfoStNameTV"
          android:fontFamily="monospace"
          android:text="@string/students_name"
          android:textSize="40sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/userInfoStEmailTV"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_marginTop="5dp"
          android:padding="10dp"
          android:text="@string/student_email"
          android:textSize="19sp" />

      <TextView
          android:id="@+id/userInfoStIssueTV"
          android:layout_width="346dp"
          android:layout_height="136dp"
          android:layout_marginStart="30dp"
          android:padding="10dp"
          android:layout_marginTop="5dp"
          android:background="@drawable/tv_rounded_boarder"
          android:text="@string/student_issue"
          android:textSize="19sp" />

  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_below="@id/userLinearLayout1"
        android:background="@drawable/edittext_boarder"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:textSize="24sp"
            android:fontFamily="@font/belgrano"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:id="@+id/issueEmailAdminClick"
            android:inputType="textEmailAddress"
            android:hint="@string/student_email"
            android:nextFocusDown="@id/issueSubjectAdminClick"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLength="43"

            android:autofillHints="Email" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/issueSubjectAdminClick"
            android:inputType="text"
            android:nextFocusDown="@string/send"
            android:hint="@string/feedback"
            android:gravity="center"
            android:layout_gravity="center"
            android:maxLength="43"
            android:autofillHints="Subject" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send78"
            android:id="@+id/oksendMainClick"
            android:layout_marginTop="10dp"
            android:background="@drawable/swipe_button_background"
            android:textColor="@android:color/white"/>






    </LinearLayout>



</RelativeLayout>