<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@android:color/white"
    android:background="#DDDDDD"
    tools:context=".AdminActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0"
        android:backgroundTint="#AAAAAA"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_rounded_boarder"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:fontFamily="@font/belgrano"
            android:text="@string/admin_side"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:src="@drawable/admin"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_vertical"
            android:iconifiedByDefault="false"
            android:layout_weight="0"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:queryHint="Search From Name"
            android:textColor="#082C28"
            android:textSize="14sp"
            android:textStyle="normal|bold"
           />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVA"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/tv_rounded_boarder"
            android:paddingStart="10dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/donewithAdmin"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="0"
            android:background="@drawable/edittext_boarder"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/back_to_main_screen"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</LinearLayout>